--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Worker Service",
   "main": "app.js",
   "scripts": {
+    "start": "DEBUG=* & node app.js",
+    "dev": "DEBUG=* & nodemon app.js",
     "test": "jest"
   },
   "repository": {
@@ -21,8 +23,10 @@
   "homepage": "https://github.com/EviCoach/blu-worker-service#readme",
   "dependencies": {
     "amqp-library": "^1.1.5",
+    "amqplib": "^0.8.0",
     "axios": "^0.26.1",
     "debug": "^4.3.4",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "mongoose": "^6.3.0"
   }
 }
